--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "11.1.2",
@@ -15,8 +16,16 @@
   },
   "devDependencies": {
     "@types/react": "17.0.24",
+    "autoprefixer": "^10.3.5",
+    "cssnano": "^5.0.8",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2",
+    "postcss": "^8.3.7",
+    "prettier": "2.4.1",
+    "tailwindcss": "^2.2.15",
     "typescript": "4.4.3"
   }
 }
